--- a/web/package.json
+++ b/web/package.json
@@ -67,6 +67,7 @@
     "dts-bundle-generator": "^9.0.0",
     "import-sort-style-eslint": "^6.0.0",
     "marked": "^9.0.0",
+    "marked-directive": "^1.0.5",
     "md5": "^2.3.0",
     "microevent.ts": "^0.2.1",
     "ngx-markdown": "^17.1.1",
