--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -60,7 +60,7 @@ jobs:
       - name: Test
         working-directory: web
         run: yarn test
-      - name: Build Cloudpilot embedded
+      - name: Build CloudpilotEmu embedded
         working-directory: web
         run: CP_RELEASE=1 yarn dist-embedded
       - name: Build PWA
