--- a/src/uarm/Makefile
+++ b/src/uarm/Makefile
@@ -198,7 +198,7 @@ $(OPTIMIZED_BINARIY_WASM_WEBKIT): $(BINARY_WASM)
 	if test -z "$(DEVELOP)"; then $(WASMSTRIP) $@; fi
 
 $(BINARY_TEST): $(OBJECTS_TEST)
-	$(LD_NATIVE) -o $@ $^ $(LDFLAGS_TEST)
+	$(LD_NATIVE) -o $@ $^ $(LDFLAGS_TEST) -lgtest_main
 
 $(OBJECTS_NATIVE_C) : $(BUILDDIR_NATIVE)/%.o : %.c
 	$(MKDIR_NATIVE) && $(CC_NATIVE) $(DEPFLAGS_NATIVE) $(CFLAGS_COMMON) $(CFLAGS_NATIVE) $(INCLUDE) -c -o $@ $<
