--- a/src/uarm/Makefile
+++ b/src/uarm/Makefile
@@ -48,7 +48,7 @@ LDFLAGS_EMCC = -O3 -Wno-version-check -flto -Wl,-u,fileno -g \
 CFLAGS_COMMON := \
 	-Werror -Wextra -Wall -Wno-unused-parameter -Wno-unknown-pragmas \
 	-Wno-visibility -Wno-constant-conversion -Wno-constant-logical-operand \
-	-D_FILE_OFFSET_BITS=64 -I./uarm -I.
+	-D_FILE_OFFSET_BITS=64
 
 CXXFLAGS_COMMON := $(CFLAGS_COMMON) -std=c++17
 CFLAGS_COMMON := $(CFLAGS_COMMON) -std=gnu11
@@ -144,7 +144,7 @@ SOURCE_TEST = 							\
 
 OBJECTS_NATIVE_C = $(SOURCE_C:%.c=$(BUILDDIR_NATIVE)/%.o)
 OBJECTS_NATIVE_CXX = $(SOURCE_CXX_NATIVE:%.cpp=$(BUILDDIR_NATIVE)/%.o)
-OBJECTS_NATIVE = $(OBJECTS_NATIVE_C) $(OBJECTS_NATIVE_CXX)
+OBJECTS_NATIVE = $(OBJECTS_NATIVE_C) $(OBJECTS_NATIVE_CXX) ../common/libcommon.a
 
 OBJECTS_TEST_CXX = $(SOURCE_TEST:%.cpp=$(BUILDDIR_TEST)/%.o)
 OBJECTS_TEST = $(OBJECTS_TEST_CXX)
@@ -153,7 +153,7 @@ OBJECTS_EMCC_C = $(SOURCE_C:%.c=$(BUILDDIR_EMCC)/%.o)
 OBJECTS_EMCC_CXX = $(SOURCE_CXX_EMCC:%.cpp=$(BUILDDIR_EMCC)/%.o)
 OBJECTS_EMCC = $(OBJECTS_EMCC_C) $(OBJECTS_EMCC_CXX)
 
-BINARY_NATIVE = uarm-bin
+BINARY_NATIVE = cp-uarm
 BINARY_EMCC = uarm_web.js
 BINARY_WASM = uarm_web.wasm
 OPTIMIZED_BINARIY_WASM_OTHER = uarm_web_other.wasm
@@ -161,20 +161,26 @@ OPTIMIZED_BINARIY_WASM_WEBKIT = uarm_web_webkit.wasm
 OPTIMIZED_BINARIES_WASM = $(OPTIMIZED_BINARIY_WASM_OTHER) $(OPTIMIZED_BINARIY_WASM_WEBKIT)
 BINARY_TEST = test/test
 
-INCLUDE = $(INCLUDE_EXTRA)
+INCLUDE = \
+	$(INCLUDE_EXTRA)			\
+	-I./uarm 					\
+	-I.							\
+	-I../common
 
-GARBAGE = \
-	$(BINARY_EMCC) \
-	$(BINARY_NATIVE) \
-	$(BINARY_WASM) \
-	$(BINARY_WASM).s \
-	$(OPTIMIZED_BINARIES_WASM) \
-	$(BINARY_TEST) \
-	$(BUILDDIR_NATIVE) \
-	$(DEPDIR_NATIVE) \
-	$(BUILDDIR_EMCC) \
-	$(DEPDIR_EMCC) \
-	$(BUILDDIR_TEST) \
+INCLUDE_NATIVE = $(INCLUDE) -I../argparse
+
+GARBAGE = 						\
+	$(BINARY_EMCC) 				\
+	$(BINARY_NATIVE) 			\
+	$(BINARY_WASM) 				\
+	$(BINARY_WASM).s 			\
+	$(OPTIMIZED_BINARIES_WASM) 	\
+	$(BINARY_TEST) 				\
+	$(BUILDDIR_NATIVE)	 		\
+	$(DEPDIR_NATIVE) 			\
+	$(BUILDDIR_EMCC) 			\
+	$(DEPDIR_EMCC) 				\
+	$(BUILDDIR_TEST) 			\
 	$(DEPDIR_TEST)
 
 bin: $(BINARY_NATIVE)
@@ -205,10 +211,10 @@ $(BINARY_TEST): $(OBJECTS_TEST)
 	$(LD_NATIVE) -o $@ $^ $(LDFLAGS_TEST) -lgtest_main
 
 $(OBJECTS_NATIVE_C) : $(BUILDDIR_NATIVE)/%.o : %.c
-	$(MKDIR_NATIVE) && $(CC_NATIVE) $(DEPFLAGS_NATIVE) $(CFLAGS_COMMON) $(CFLAGS_NATIVE) $(INCLUDE) -c -o $@ $<
+	$(MKDIR_NATIVE) && $(CC_NATIVE) $(DEPFLAGS_NATIVE) $(CFLAGS_COMMON) $(CFLAGS_NATIVE) $(INCLUDE_NATIVE) -c -o $@ $<
 
 $(OBJECTS_NATIVE_CXX) : $(BUILDDIR_NATIVE)/%.o : %.cpp
-	$(MKDIR_NATIVE) && $(CXX_NATIVE) $(DEPFLAGS_NATIVE) $(CXXFLAGS_COMMON) $(CXXFLAGS_NATIVE) $(INCLUDE) -c -o $@ $<
+	$(MKDIR_NATIVE) && $(CXX_NATIVE) $(DEPFLAGS_NATIVE) $(CXXFLAGS_COMMON) $(CXXFLAGS_NATIVE) $(INCLUDE_NATIVE) -c -o $@ $<
 
 $(OBJECTS_TEST_CXX) : $(BUILDDIR_TEST)/%.o : %.cpp
 	$(MKDIR_TEST) && $(CXX_NATIVE) $(DEPFLAGS_TEST) $(CXXFLAGS_COMMON) $(CXXFLAGS_TEST) $(INCLUDE) -c -o $@ $<
