--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{env.EM_CACHE_FOLDER}}
-          key: ${{env.EM_VERSION}}-${{ runner.os }}-2
+          key: ${{env.EM_VERSION}}-${{ runner.os }}
       - name: Setup emscripten
         uses: DirtyHairy/setup-emsdk@master
         with:
