--- a/.github/workflows/native-build.yaml
+++ b/.github/workflows/native-build.yaml
@@ -14,5 +14,5 @@ jobs:
       - name: Install dependencies
         run: 'sudo apt-get update && sudo apt-get -y install build-essential libreadline-dev libboost-all-dev libsdl2-image-dev libsdl2-dev'
       - name: Build
-        run: "echo 'CFLAGS_NATIVE = -O0 -DENABLE_DEBUGGER $(shell sdl2-config --cflags)' > src/Makefile.local && make -j2 bin"
+        run: "echo 'CFLAGS_NATIVE = -Werror -O0 -DENABLE_DEBUGGER $(shell sdl2-config --cflags)' > src/Makefile.local && make -j2 bin"
     
