--- a/src/Makefile.local.example
+++ b/src/Makefile.local.example
@@ -24,5 +24,5 @@ CFLAGS_NATIVE = \
 # CXXFLAGS_NATIVE ?= $(CFLAGS_NATIVE)
 
 LDFLAGS_NATIVE =  \
-	$(shell sdl2-config --libs) -lSDL2_image -lreadline -lboost_coroutine -ldl -pthread -lresolv -lcurl \
+	$(shell sdl2-config --libs) -lSDL2_image -lreadline -pthread -lresolv -lcurl \
 	-L/opt/homebrew/lib -L/opt/homebrew/opt/curl/lib
