--- a/src/uarm/Makefile
+++ b/src/uarm/Makefile
@@ -13,8 +13,8 @@ DEVELOP =
 WASMOPT = wasm-opt
 WASMOPT_FLAGS_BASE = --no-inline="*mmuTranslate*" --enable-bulk-memory --enable-bulk-memory-opt  --enable-sign-ext --enable-nontrapping-float-to-int  --inlining-optimizing \
 	-fimfs 1000 -ifwl -pii 1000  -aimfs 10 -tnh -lmu -O4
-WASMOPT_FLAGS_WEBKIT = --no-inline="*execFn_*"  $(WASMOPT_FLAGS_BASE) 
-WASMOPT_FLAGS_OTHER = $(WASMOPT_FLAGS_BASE)
+WASMOPT_FLAGS_WEBKIT = --no-inline="*execFn_*" --no-inline="*cpuCycleArm*" --no-inline="*cpuCycleThumb*" $(WASMOPT_FLAGS_BASE) 
+WASMOPT_FLAGS_OTHER = --no-inline="*cpuCycle" $(WASMOPT_FLAGS_BASE)
 
 WASMSTRIP = wasm-strip
 YARN = yarn
