--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,7 @@
     "dist-embedded": "yarn build-embedded && yarn typedoc-embedded && node script/dist-embedded",
     "dts-bundle-embedded": "dts-bundle-generator --config dts-bundle-generator.json",
     "gen-revision": "echo \"export const REVISION = '`git rev-parse --short HEAD`';\" > pwa/src/revision.gen.ts",
-    "test": "mocha common/test/*.ts",
+    "test": "NODE_OPTIONS=$(node -e \"console.log(parseInt(process.version.match(/v(\\d+)/)[1], 10) >= 22 ? '--no-experimental-strip-types' : '')\") mocha common/test/*.ts",
     "lint": "eslint common embedded pwa",
     "pwa-icons": "pwa-asset-generator --opaque false --favicon --scrape --icon-only -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/icon.html pwa/src/assets-pwa",
     "pwa-splash": "pwa-asset-generator --scrape --splash-only -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/splashscreen.html pwa/src/assets-pwa",
