ssp, ac97, gpio

--- a/src/uarm/Makefile
+++ b/src/uarm/Makefile
@@ -56,12 +56,9 @@ SOURCE_C = 								\
 	uarm/pxa_RTC.c 						\
 	uarm/pxa_PwrClk.c 					\
 	uarm/pxa_I2S.c 						\
-	uarm/pxa_GPIO.c 					\
 	uarm/pxa_PWM.c 						\
-	uarm/pxa_AC97.c 					\
 	uarm/pxa_MemCtrl.c 					\
 	uarm/pxa_I2C.c 						\
-	uarm/pxa_SSP.c 						\
 	uarm/pxa255_UDC.c 					\
 	uarm/pxa270_UDC.c 					\
 	uarm/pxa255_DSP.c 					\
@@ -93,6 +90,9 @@ SOURCE_CXX =		 					\
 	uarm/pxa_LCD.cpp					\
 	uarm/pxa_DMA.cpp					\
 	uarm/pxa_UART.cpp 					\
+	uarm/pxa_SSP.cpp					\
+	uarm/pxa_GPIO.cpp 					\
+	uarm/pxa_AC97.cpp 					\
 	uarm/cp15.cpp 						\
 	uarm/memcpy.cpp						\
 	uarm/audio_queue.cpp				\
