--- a/src/uarm/Makefile
+++ b/src/uarm/Makefile
@@ -54,7 +54,6 @@ SOURCE_C = 								\
 	uarm/keys.c 						\
 	uarm/pxa_MMC.c 						\
 	uarm/pxa_RTC.c 						\
-	uarm/pxa_PWM.c 						\
 	uarm/pxa255_UDC.c 					\
 	uarm/pxa270_UDC.c 					\
 	uarm/pxa255_DSP.c 					\
@@ -93,6 +92,7 @@ SOURCE_CXX =		 					\
 	uarm/pxa_I2C.cpp					\
 	uarm/pxa_MemCtrl.cpp				\
 	uarm/pxa_PwrClk.cpp 				\
+	uarm/pxa_PWM.cpp					\
 	uarm/cp15.cpp 						\
 	uarm/memcpy.cpp						\
 	uarm/audio_queue.cpp				\
