--- a/src/uarm/Makefile
+++ b/src/uarm/Makefile
@@ -56,10 +56,8 @@ SOURCE_C = 								\
 	uarm/pxa270_IMC.c 					\
 	uarm/pxa270_KPC.c 					\
 	uarm/pxa270_WMMX.c 					\
-	uarm/devicePalmTungstenE2.c 		\
 	uarm/mmiodev_DirectNAND.c 			\
 	uarm/nand.c 						\
-	uarm/ac97dev_WM9712L.c				\
 	uarm/pace_patch.c 					\
 	uarm/peephole.c						\
 	uarm/uae/cpudefs.c 					\
@@ -93,6 +91,8 @@ SOURCE_CXX =		 					\
 	uarm/pxa_RTC.cpp					\
 	uarm/pxa255_DSP.cpp					\
 	uarm/pxa255_UDC.cpp					\
+	uarm/ac97dev_WM9712L.cpp			\
+	uarm/devicePalmTungstenE2.cpp 		\
 	uarm/cp15.cpp 						\
 	uarm/memcpy.cpp						\
 	uarm/audio_queue.cpp				\
