--- a/src/uarm/Makefile
+++ b/src/uarm/Makefile
@@ -50,6 +50,7 @@ SOURCE_C = 								\
 	uarm/ROM.c 							\
 	uarm/gdbstub.c						\
 	uarm/keys.c 						\
+	uarm/timeutil.c						\
 	uarm/pxa270_UDC.c 					\
 	uarm/pxa270_IMC.c 					\
 	uarm/pxa270_KPC.c 					\
